<resources>
    <string name="app_name">QuizzesEverywhere</string>
    <string name="quiz_image">Quiz image</string>
    <string name="category">Category:</string>
    <string name="last_score">Last score:</string>
    <string name="progress_in_quiz">Progress in quiz:</string>
    <string name="quiz_parcelable">Quiz parcelable</string>
    <string name="quiz_id_extra">quiz_id_extra</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="geography">geography</string>
    <string name="last_progress">80%</string>
    <string name="last_score_mock">8/10</string>
    <string name="question_image">Question image</string>
    <string name="first_answer">First answer</string>
    <string name="fourth_answer">Fourth answer</string>
    <string name="third_answer">Third answer</string>
    <string name="second_answer">Second answer</string>
    <string name="title_tools">Quiz title</string>
</resources>
